# 2DGameEngine

./: .gitignore  CMakeLists.txt  README.md  build.sh  build_breakout.sh  build_pong.sh  compile_flags.txt
docs/: README.md  THEME_CUSTOMIZATION.md  index.html  script.js  style.css  tailwind.config.ts
docs/public/assets/demo/: README.md
docs/public/assets/images/: README.md
docs/public/assets/videos/: README.md
docs/src/: App.tsx  index.css
docs/src/components/: Contact.tsx  DemoSection.tsx  DesignDecisions.tsx  DesignSection.tsx  FeaturesSection.tsx  Footer.tsx  Header.tsx  HeroSection.tsx  LiveDemo.tsx  Navbar.tsx  Navigation.tsx  ThemeProvider.tsx  ThemeToggle.tsx  TryItSection.tsx  TryItYourself.tsx  VideoShowcase.tsx  WhatIBuilt.tsx
docs/src/config/: designDecisions.json  features.json  sections.json  site.json
docs/src/hooks/: useConfig.ts
docs/src/pages/: Index.tsx
docs/src/utils/: configValidator.ts
examples/: Breakout.cpp  Pong.cpp
experiments/: README.md  ecs_benchmark.cpp
include/: Collider.h  Component.h  Engine.h  FontManager.h  GameObject.h  InputManager.h  Physics.h  RenderContext.h  Rigidbody.h  Sprite.h  Text.h  TextureManager.h  Transform.h  UpdateContext.h  Vector2.h
src/: Collider.cpp  Component.cpp  Engine.cpp  FontManager.cpp  GameObject.cpp  InputManager.cpp  Physics.cpp  Rigidbody.cpp  Sprite.cpp  Text.cpp  TextureManager.cpp  Transform.cpp  main.cpp
